--- a/gi-pro-mobile/www/css/ionic.app.css
+++ b/gi-pro-mobile/www/css/ionic.app.css
@@ -10079,6 +10079,67 @@ input[readonly] {
     font-size: 16px; }
 
 /*
+* Professionist Details
+*/
+.prof-details .professional {
+  margin-bottom: 10px;
+  padding-bottom: 20px;
+  border-bottom: 2px solid #1f6ca5; }
+  .prof-details .professional .profile-image-container {
+    display: block; }
+    .prof-details .professional .profile-image-container .profile-image img {
+      width: 100%;
+      height: auto; }
+    .prof-details .professional .profile-image-container .profile-image-placeholder {
+      display: block;
+      border-radius: 8px;
+      height: 100px;
+      background-color: #f8f8f8;
+      position: relative; }
+      .prof-details .professional .profile-image-container .profile-image-placeholder .upload {
+        position: absolute;
+        bottom: 4px;
+        right: 8px;
+        font-size: 28px;
+        color: #444; }
+  .prof-details .professional .item {
+    margin-bottom: 20px;
+    border: none; }
+    .prof-details .professional .item ul {
+      /*position: absolute;
+				bottom: 10px;*/ }
+  .prof-details .professional ul li {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; }
+    .prof-details .professional ul li .icon {
+      display: inline-block;
+      width: 20px;
+      margin-right: 10px;
+      font-size: 20px;
+      text-align: center; }
+  .prof-details .professional ul .name {
+    font-weight: bold;
+    font-size: larger;
+    white-space: normal; }
+  .prof-details .professional ul .type {
+    padding-top: 5px;
+    font-style: italic;
+    white-space: normal; }
+  .prof-details .professional ul .address {
+    padding-top: 5px; }
+  .prof-details .professional ul .phone {
+    padding-top: 5px; }
+  .prof-details .professional ul .email {
+    padding-top: 5px; }
+  .prof-details .professional .competenze {
+    margin: 10px 10px 10px 10px; }
+    .prof-details .professional .competenze .lista-competenze {
+      list-style-type: disc; }
+      .prof-details .professional .competenze .lista-competenze li i {
+        font-size: 8px; }
+
+/*
  * DETAILS
  */
 .details a,
