--- a/gi-pro-mobile/www/templates/serviceAndProf.html
+++ b/gi-pro-mobile/www/templates/serviceAndProf.html
@@ -1,13 +1,17 @@
 <ion-view view-title="{{'app' | translate}}" class="serviceandprofessionist">
-    <ion-nav-buttons side="right">
-        <!--
-<button class="button button-icon button-clear ion-search" ng-click="goTo('app.search')" ng-if="selectedTab() == 0"></button>
-<button class="button button-icon button-clear ion-ios-bell" ng-click="goTo('app.notifications', {}, true, true, true)"></button>
--->
-        <button class="button button-icon button-clear ion-search" ng-click="goTo('app.search')"></button>
-        <button class="button button-icon button-clear ion-map" ng-click="switchToMap()"></button>
-    </ion-nav-buttons>
 
+    <ion-nav-buttons side="right">
+        <!--        <div class="bar bar-header item-input-inset" ng-if="hasFilters">-->
+        <div class="bar bar-header item-input-inset">
+            <label class="item-input-wrapper textbox-search">
+                <i class="icon ion-ios7-search placeholder-icon"></i>
+                <input type="search" placeholder="Search">
+            </label>
+
+        </div>
+        <button class="button button-icon button-clear ion-search" ng-click="switchSearchBar()"></button>
+        <button class="button button-icon button-clear" ng-class="{'ion-map':listVisualization, 'ion-ios-list-outline':!listVisualization}" ng-click="switchToMap()"></button>
+    </ion-nav-buttons>
     <ion-tabs class="tabs-calm" ng-class="{'tabs-item-hide':!logged}">
         <ion-tab title="{{'service_tab' | translate}}" ng-if="logged">
             <ion-pane>
@@ -66,21 +70,26 @@
 
                     </div>
 
-                    <!--                    <h4 class="padding" ng-if="!!activeProfessionals && activeProfessionals.length == 0">{{'offers_empty' | translate}}</h4>-->
-                    <div class="card" ng-repeat="professionist in filteredProfessional = (activeProfessionals | filter :{profession:filters.selectedProfession.name,zone:filters.selectedZone.name})" ng-if="!!activeProfessionals && activeProfessionals.length > 0" ng-click="openProfDetails(professionist)">
-                        <!--
+                    <div class="list-visualization" ng-if="listVisualization">
+                        <div class="card" ng-repeat="professionist in filteredProfessional = (activeProfessionals | filter :{profession:filters.selectedProfession.name,zone:filters.selectedZone.name})" ng-if="!!activeProfessionals && activeProfessionals.length > 0" ng-click="openProfDetails(professionist)">
+                            <!--
                         <div class="item item-text-wrap">
                             <h2>prof blabla</h2>
                         </div>
 -->
-                        <a class="item item-avatar" ng-click="openDetailsProf(professionist)">
-                            <img ng-src="{{professionist.picture}}">
-                            <div>{{professionist.name}}</div>
-                            <p>{{professionist.profession}}</p>
-                        </a>
+                            <a class="item item-avatar" ng-click="openDetailsProf(professionist)">
+                                <img ng-src="{{professionist.picture}}">
+                                <div>{{professionist.name}}</div>
+                                <p>{{professionist.profession}}</p>
+                            </a>
+                        </div>
+                        <p ng-hide="filteredProfessional.length ">{{'professional_empty' | translate}}</p>
                     </div>
-                    <p ng-hide="filteredProfessional.length ">{{'professional_empty' | translate}}</p>
-
+                    <div class="map-visualization" ng-if="!listVisualization">
+                        <div id="modal-map-container" data-tap-disabled="true">
+                            <leaflet event-broadcast="events" center="center" markers="markers" style="width: 100%; height: 700px;" ng-init="initMap()" id="serviceMap"></leaflet>
+                        </div>
+                    </div>
                 </ion-content>
             </ion-pane>
         </ion-tab>
