--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -373,6 +373,13 @@ $dark:                            #444 !default;
           h3 {
             margin: auto;
           }
+          .list-service-cost {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            text-align: right;
+            font-size: 20px;
+          }
         }
         .icon {
           margin-right: 7px;
