--- a/gi-pro-mobile/www/templates/serviceAndProf.html
+++ b/gi-pro-mobile/www/templates/serviceAndProf.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{title}}" class="serviceandprofessionist">
+<ion-view view-title="{{title}}" class="serviceandprofessionist" hide-back-button="true">
   <ion-nav-buttons side="left">
     <!--
     <button class="button back-button buttons button-clear header-item" ng-click="goBack()" ng-hide="!searchBarVisible">
@@ -26,7 +26,11 @@
     <button class="button button-icon button-clear" ng-class="{'ion-map':listVisualization, 'ion-ios-list-outline':!listVisualization}" ng-click="switchToMap()" ng-hide="searchBarVisible"></button>
   </ion-nav-buttons>
   <ion-tabs class="tabs-calm" ng-class="{'tabs-item-hide':!logged}">
-    <ion-tab title="{{'service_tab' | translate}}" ng-if="logged">
+    <ion-tab title="{{'service_tab' | translate}}" on-select="initServiceMap()" ng-if="logged">
+      <!--
+      <ion-tabs class="tabs-calm" ng-class="{'tabs-item-hide':!logged}">
+        <ion-tab title="{{'service_tab' | translate}}" ng-if="logged">
+-->
       <ion-pane>
         <ion-content>
           <!--                    filter for services-->
@@ -47,19 +51,35 @@
             <div ng-repeat="zone in filters.allZones" ng-click="selectFilter('zone',zone)">{{zone.name}}</div>
           </div>
           <!--                    <h4 class="padding" ng-if="!!activeServices && activeServices.length == 0">{{'requests_empty' | translate}}</h4>-->
+          <!--
           <div class="card" ng-repeat="service in  filteredServices = (activeServices | filter :{service:filters.selectedService.name,zone:filters.selectedZone.name})" ng-if="!!activeServices && activeServices.length > 0" ng-click="openRequestDetails(service)">
             <a class="item" href="#">
               <div>{{service.service}}</div>
             </a>
 
           </div>
-          <p ng-hide="filteredServices.length ">{{'services_empty' | translate}}</p>
+-->
+          <div class="list-visualization" ng-if="listVisualization">
+            <div class="card" ng-repeat="service in filteredServices = (activeServices | filter :{service:filters.selectedService.name,zone:filters.selectedZone.name})" ng-if="!!activeServices && activeServices.length > 0" ng-click="openRequestDetails(service)">
+              <a class="item" ng-click="openDetailsService(service)">
+                <div><span>{{service.service}}</span></div>
+                <p>{{service.professional.name}}{{service.professional.surname}}</p>
+                <p class="list-service-cost">{{service.cost}}</p>
+              </a>
 
+            </div>
+            <p ng-hide="filteredServices.length ">{{'services_empty' | translate}}</p>
+          </div>
+          <div class="map-visualization" ng-if="!listVisualization">
+            <div id="modal-map-container" data-tap-disabled="true">
+              <leaflet event-broadcast="events" center="center" markers="servicesMarkers" style="width: 100%; height: 700px;" ng-init="initServiceMap()" id="serviceMap"></leaflet>
+            </div>
+          </div>
         </ion-content>
       </ion-pane>
     </ion-tab>
 
-    <ion-tab title="{{'prof_tab' | translate}}">
+    <ion-tab title="{{'prof_tab' | translate}}" on-select="initProfessionMap()">
       <ion-pane>
         <ion-content>
           <!--                    filter for professionals-->
@@ -85,11 +105,6 @@
 
           <div class="list-visualization" ng-if="listVisualization">
             <div class="card" ng-repeat="professionist in filteredProfessional = (activeProfessionals | filter :{profession:filters.selectedProfession.name,zone:filters.selectedZone.name})" ng-if="!!activeProfessionals && activeProfessionals.length > 0" ng-click="openProfDetails(professionist)">
-              <!--
-                        <div class="item item-text-wrap">
-                            <h2>prof blabla</h2>
-                        </div>
--->
               <a class="item item-avatar" ng-click="openDetailsProf(professionist)">
                 <img ng-src="{{professionist.imageUrl}}">
                 <div><span>{{professionist.name}}</span><span>{{professionist.surname}}</span></div>
@@ -100,7 +115,7 @@
           </div>
           <div class="map-visualization" ng-if="!listVisualization">
             <div id="modal-map-container" data-tap-disabled="true">
-              <leaflet event-broadcast="events" center="center" markers="markers" style="width: 100%; height: 700px;" ng-init="initMap()" id="serviceMap"></leaflet>
+              <leaflet event-broadcast="events" center="center" markers="professionalMarkers" style="width: 100%; height: 700px;" ng-init="initProfessionMap()" id="professionMap"></leaflet>
             </div>
           </div>
         </ion-content>
