Fix for missing CSS

--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -153,6 +153,13 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 }
 
 
+/* Pages */
+
+.header-title {
+  box-shadow: 0px 7px 10px 0px rgba(102, 102, 102, 1);
+}
+
+
 /* Buttons */
 
 .button.button-fab {
