--- a/gi-pro-mobile/www/css/ionic.app.css
+++ b/gi-pro-mobile/www/css/ionic.app.css
@@ -15,6 +15,8 @@ $assertive:                       #ef473a !default;
 $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
+/* Custom colors */
+/* Ionic overrides*/
 /*!
   Ionicons, v2.0.1
   Created by Ben Sperry for the Ionic Framework, http://ionicons.com/
@@ -9815,7 +9817,11 @@ a.button {
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
 
+/* Bar */
 .bar .clear-button {
+  /*position: absolute;*/
+  /*right: 0;*/
+  /*top: 5px;*/
   color: #bbb;
   height: 20px; }
 
@@ -9856,8 +9862,8 @@ a.button {
 
 .gi-pro .ionic_datepicker_popup .popup-buttons button {
   background-color: #d75719;
-  /*border-radius: 0;
-		margin-right: 1px;*/
+  /*border-radius: 0;*/
+  /*margin-right: 1px;*/
   color: #ffffff; }
 
 .gi-pro .ionic_datepicker_modal .header,
@@ -9905,6 +9911,10 @@ a.button {
 
 .gi-pro .ionic_timepicker_popup .popup-buttons .button {
   background-color: #d75719; }
+
+/* Pages */
+.header-title, .tutorial ion-slides .swiper-container {
+  box-shadow: 0px 7px 10px 0px #666666; }
 
 /* Buttons */
 .button.button-fab {
@@ -10001,29 +10011,33 @@ input[readonly] {
  * TUTORIAL
  */
 .tutorial {
-  background-color: #10406f; }
+  /*background-color: $t_darkblue;*/ }
   .tutorial .title {
     height: 10%;
     color: white;
-    text-transform: uppercase;
+    background-color: #10406f;
+    /*text-transform: uppercase;*/
     text-align: center;
-    font-size: larger; }
+    font-size: 2em; }
   .tutorial ion-slides {
-    height: 60%; }
-    .tutorial ion-slides img {
-      border: 2px solid white; }
+    height: 65%;
+    background-color: #10406f;
+    /*
+    .description {
+       color: white;
+       font-size: 16px;
+    }
+    */ }
     .tutorial ion-slides .swiper-slide {
       text-align: center; }
     .tutorial ion-slides .swiper-pagination .swiper-pagination-bullet {
       width: 14px;
       height: 14px;
-      border: 1px solid white;
+      border: 2px solid white;
       background: transparent;
       opacity: 1; }
     .tutorial ion-slides .swiper-pagination .swiper-pagination-bullet-active {
       background: white; }
-  .tutorial .tutorial-footer {
-    background-color: #10406f; }
   .tutorial .tutorial-content {
     color: #fff;
     max-height: 80%;
@@ -10035,7 +10049,12 @@ input[readonly] {
     .tutorial .tutorial-content img {
       margin-top: 20px;
       border: 1px solid white;
-      max-width: 60%; }
+      max-width: 80%; }
+  .tutorial .tutorial-footer {
+    padding-top: 10px;
+    background-color: white; }
+    .tutorial .tutorial-footer .button.button-block {
+      margin: 0; }
 
 /*
  * HOME
@@ -10063,6 +10082,9 @@ input[readonly] {
     margin-right: 4px;
     font-size: 16px; }
 
+/*
+ * SERVICES AND PROFESSIONISTS TABS
+ */
 .serviceandprofessionist .scroll-view {
   height: 100%; }
 
@@ -10093,8 +10115,8 @@ input[readonly] {
     font-size: 16px; }
 
 /*
-* Professionist Details
-*/
+ * Professionist Details
+ */
 .prof-details .professional {
   margin-bottom: 10px;
   padding-bottom: 20px;
@@ -10120,8 +10142,8 @@ input[readonly] {
     margin-bottom: 20px;
     border: none; }
     .prof-details .professional .item ul {
-      /*position: absolute;
-				bottom: 10px;*/ }
+      /*position: absolute;*/
+      /*bottom: 10px;*/ }
   .prof-details .professional ul li {
     white-space: nowrap;
     overflow: hidden;
@@ -10178,8 +10200,8 @@ input[readonly] {
     margin-bottom: 20px;
     border: none; }
     .details .professional .item ul {
-      /*position: absolute;
-				bottom: 10px;*/ }
+      /*position: absolute;*/
+      /*bottom: 10px;*/ }
   .details .professional ul li {
     white-space: nowrap;
     overflow: hidden;
@@ -10302,9 +10324,11 @@ input[readonly] {
 .login,
 .registration {
   text-align: center;
-  /*.item-input-cf input {
-		text-transform: uppercase;
-	}*/ }
+  /*
+  .item-input-cf input {
+    text-transform: uppercase;
+  }
+  */ }
   .login .item-checkbox,
   .registration .item-checkbox {
     font-size: 14px;
